add_executable( gct-gltf gct.cpp )
target_compile_definitions( gct-gltf PRIVATE -DCMAKE_CURRENT_BINARY_DIR="${CMAKE_CURRENT_BINARY_DIR}" )
target_compile_definitions( gct-gltf PRIVATE -DCMAKE_CURRENT_SOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}" )

add_shader( gct-gltf shaders/tangent.frag )
add_shader( gct-gltf shaders/tangent.vert )
add_shader( gct-gltf shaders/tangent_bc.frag )
add_shader( gct-gltf shaders/tangent_bc_em.frag )
add_shader( gct-gltf shaders/tangent_bc_em_no.frag )
add_shader( gct-gltf shaders/tangent_bc_em_no_sh.frag )
add_shader( gct-gltf shaders/tangent_bc_em_sh.frag )
add_shader( gct-gltf shaders/tangent_bc_mr.frag )
add_shader( gct-gltf shaders/tangent_bc_mr_em.frag )
add_shader( gct-gltf shaders/tangent_bc_mr_em_no.frag )
add_shader( gct-gltf shaders/tangent_bc_mr_em_no_sh.frag )
add_shader( gct-gltf shaders/tangent_bc_mr_em_sh.frag )
add_shader( gct-gltf shaders/tangent_bc_mr_no.frag )
add_shader( gct-gltf shaders/tangent_bc_mr_no_sh.frag )
add_shader( gct-gltf shaders/tangent_bc_mr_oc.frag )
add_shader( gct-gltf shaders/tangent_bc_mr_oc_em.frag )
add_shader( gct-gltf shaders/tangent_bc_mr_oc_em_no.frag )
add_shader( gct-gltf shaders/tangent_bc_mr_oc_em_no_sh.frag )
add_shader( gct-gltf shaders/tangent_bc_mr_oc_em_sh.frag )
add_shader( gct-gltf shaders/tangent_bc_mr_oc_no.frag )
add_shader( gct-gltf shaders/tangent_bc_mr_oc_no_sh.frag )
add_shader( gct-gltf shaders/tangent_bc_mr_oc_sh.frag )
add_shader( gct-gltf shaders/tangent_bc_mr_sh.frag )
add_shader( gct-gltf shaders/tangent_bc_no.frag )
add_shader( gct-gltf shaders/tangent_bc_no_sh.frag )
add_shader( gct-gltf shaders/tangent_bc_oc.frag )
add_shader( gct-gltf shaders/tangent_bc_oc_em.frag )
add_shader( gct-gltf shaders/tangent_bc_oc_em_no.frag )
add_shader( gct-gltf shaders/tangent_bc_oc_em_no_sh.frag )
add_shader( gct-gltf shaders/tangent_bc_oc_em_sh.frag )
add_shader( gct-gltf shaders/tangent_bc_oc_no.frag )
add_shader( gct-gltf shaders/tangent_bc_oc_no_sh.frag )
add_shader( gct-gltf shaders/tangent_bc_oc_sh.frag )
add_shader( gct-gltf shaders/tangent_bc_sh.frag )
add_shader( gct-gltf shaders/tangent_em.frag )
add_shader( gct-gltf shaders/tangent_em_no.frag )
add_shader( gct-gltf shaders/tangent_em_no_sh.frag )
add_shader( gct-gltf shaders/tangent_em_sh.frag )
add_shader( gct-gltf shaders/tangent_mr.frag )
add_shader( gct-gltf shaders/tangent_mr_em.frag )
add_shader( gct-gltf shaders/tangent_mr_em_no.frag )
add_shader( gct-gltf shaders/tangent_mr_em_no_sh.frag )
add_shader( gct-gltf shaders/tangent_mr_em_sh.frag )
add_shader( gct-gltf shaders/tangent_mr_no.frag )
add_shader( gct-gltf shaders/tangent_mr_no_sh.frag )
add_shader( gct-gltf shaders/tangent_mr_oc.frag )
add_shader( gct-gltf shaders/tangent_mr_oc_em.frag )
add_shader( gct-gltf shaders/tangent_mr_oc_em_no.frag )
add_shader( gct-gltf shaders/tangent_mr_oc_em_no_sh.frag )
add_shader( gct-gltf shaders/tangent_mr_oc_em_sh.frag )
add_shader( gct-gltf shaders/tangent_mr_oc_no.frag )
add_shader( gct-gltf shaders/tangent_mr_oc_no_sh.frag )
add_shader( gct-gltf shaders/tangent_mr_oc_sh.frag )
add_shader( gct-gltf shaders/tangent_mr_sh.frag )
add_shader( gct-gltf shaders/tangent_no.frag )
add_shader( gct-gltf shaders/tangent_no_sh.frag )
add_shader( gct-gltf shaders/tangent_oc.frag )
add_shader( gct-gltf shaders/tangent_oc_em.frag )
add_shader( gct-gltf shaders/tangent_oc_em_no.frag )
add_shader( gct-gltf shaders/tangent_oc_em_no_sh.frag )
add_shader( gct-gltf shaders/tangent_oc_em_sh.frag )
add_shader( gct-gltf shaders/tangent_oc_no.frag )
add_shader( gct-gltf shaders/tangent_oc_no_sh.frag )
add_shader( gct-gltf shaders/tangent_oc_sh.frag )
add_shader( gct-gltf shaders/tangent_sh.frag )
add_shader( gct-gltf shaders/world.frag )
add_shader( gct-gltf shaders/world.vert )
add_shader( gct-gltf shaders/world_bc.frag )
add_shader( gct-gltf shaders/world_bc_em.frag )
add_shader( gct-gltf shaders/world_bc_em_sh.frag )
add_shader( gct-gltf shaders/world_bc_mr.frag )
add_shader( gct-gltf shaders/world_bc_mr_em.frag )
add_shader( gct-gltf shaders/world_bc_mr_em_sh.frag )
add_shader( gct-gltf shaders/world_bc_mr_oc.frag )
add_shader( gct-gltf shaders/world_bc_mr_oc_em.frag )
add_shader( gct-gltf shaders/world_bc_mr_oc_em_sh.frag )
add_shader( gct-gltf shaders/world_bc_mr_oc_sh.frag )
add_shader( gct-gltf shaders/world_bc_mr_sh.frag )
add_shader( gct-gltf shaders/world_bc_oc.frag )
add_shader( gct-gltf shaders/world_bc_oc_em.frag )
add_shader( gct-gltf shaders/world_bc_oc_em_sh.frag )
add_shader( gct-gltf shaders/world_bc_oc_sh.frag )
add_shader( gct-gltf shaders/world_bc_sh.frag )
add_shader( gct-gltf shaders/world_em.frag )
add_shader( gct-gltf shaders/world_em_sh.frag )
add_shader( gct-gltf shaders/world_mr.frag )
add_shader( gct-gltf shaders/world_mr_em.frag )
add_shader( gct-gltf shaders/world_mr_em_sh.frag )
add_shader( gct-gltf shaders/world_mr_oc.frag )
add_shader( gct-gltf shaders/world_mr_oc_em.frag )
add_shader( gct-gltf shaders/world_mr_oc_em_sh.frag )
add_shader( gct-gltf shaders/world_mr_oc_sh.frag )
add_shader( gct-gltf shaders/world_mr_sh.frag )
add_shader( gct-gltf shaders/world_oc.frag )
add_shader( gct-gltf shaders/world_oc_em.frag )
add_shader( gct-gltf shaders/world_oc_em_sh.frag )
add_shader( gct-gltf shaders/world_oc_sh.frag )
add_shader( gct-gltf shaders/world_sh.frag )

